--- a/src/styles.css
+++ b/src/styles.css
@@ -190,6 +190,10 @@ a :hover {
     font-size: 16px;
     text-align: center;
   }
+  .sub-heading3 {
+    font-size: 16px;
+    text-align: center;
+  }
   .intro {
     font-size: 14px;
   }
@@ -202,6 +206,7 @@ a :hover {
     width: 90%;
     display: block;
     margin: 0 auto;
+    margin-bottom: 10px;
   }
   .external-links {
     font-size: 10px;
