--- a/src/styles.css
+++ b/src/styles.css
@@ -201,6 +201,10 @@ a :hover {
     font-size: 16px;
     text-align: center;
   }
+  .sub-heading5 {
+    font-size: 16px;
+    text-align: center;
+  }
   .intro {
     font-size: 14px;
   }
