--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,13 @@
-/* font-family: 'Eagle Lake', serif;
-font-family: 'Fondamento', cursive;
-font-family: 'Gilda Display', serif;
-font-family: 'Laila', serif;
-font-family: 'Macondo', cursive;
-font-family: 'Montez', cursive;
-font-family: 'Pirata One', system-ui;
-font-family: 'WindSong', cursive; */
-
-body {
-  background-color: #692b37;
+.body-home {
+  background-color: #953936;
   background-image: url(/images/city.jpg);
+  background-repeat: none;
+  background-size: cover;
+  font-family: "Laila", serif;
+}
+.body-book-pages {
+  background-color: #953936;
+  background-image: url(/images/sunset.jpeg);
   background-repeat: none;
   background-size: cover;
   font-family: "Laila", serif;
@@ -42,13 +40,12 @@ footer a {
 a :hover {
   cursor: pointer;
 }
-
 .container-fluid {
-  background-color: #541423;
+  background-color: #953936;
   padding: 10px;
 }
 .navbar {
-  background-color: #541423;
+  background-color: #953936;
   padding: 0;
   opacity: 0.6;
 }
@@ -56,9 +53,6 @@ a :hover {
   color: #e8db8d;
 }
 .nav-link {
-  color: #e8db8d;
-}
-.nav-link active {
   color: #e8db8d;
 }
 .container-homepage {
@@ -126,7 +120,6 @@ a :hover {
   border-radius: 7px;
   margin-bottom: 40px;
 }
-
 .external-links {
   text-align: center;
   display: flex;
@@ -145,7 +138,7 @@ a :hover {
 .author-links {
   text-align: center;
   background-color: #541423;
-  padding: 10px 0;
+  padding: 20px 0;
   border-radius: 6px;
   margin: 0 auto;
   max-width: 600px;
@@ -161,7 +154,6 @@ a :hover {
   color: #e8db8d;
   font-weight: bold;
 }
-
 @media (max-width: 500px) {
   h1 {
     font-size: 45px;
